# ml-orchestration

./: .gitignore  README.md  pyproject.toml
deploy/: .env.example  README.md  docker-compose.yml
examples/: full_pipeline.py  mlops_pipeline.py  post_deployment_flows.py  test_full_pipeline.py
src/orchestration/: __init__.py  agent.py  bus.py  cli.py  control_plane.py  events.py  monitoring.py  scheduler.py  state.py  trigger.py  types.py
src/orchestration/tests/: test_monitoring.py  test_nested_flows.py  test_trigger.py
src/pipeline/: .gitignore  Dockerfile.data  Dockerfile.flow  Dockerfile.train  README.md  ab_flow.py  adaptation_flow.py  flow.py  monitoring_flow.py  promote.py  pytest.ini  requirements-remote.txt  requirements-train.txt  requirements.txt  run_experiments.py  select_flow.py  serve.py  training_flow.py
src/pipeline/src/: __init__.py  ab_split.py  adaptation_policy.py  artifacts.py  component_tracking.py  component_version.py  config.py  download_data.py  drift_checks.py  experiment.py  flow_config.py  flow_registry.py  ingestion.py  mlflow_setup.py  model_checks.py  prepare_dataset.py  promotion.py  quality_checks.py  registry.py  selection.py  sentiment_data.py  splits.py  train.py  unseen_segment.py  utils.py
src/pipeline/tests/: conftest.py  test_ab_split.py  test_adaptation_policy.py  test_artifact_isolation.py  test_baseline_margin.py  test_categorical_distribution.py  test_component_versioning.py  test_drift_psi.py  test_experiments.py  test_flow_versioning.py  test_incoming_ingestion.py  test_ingestion.py  test_invariance.py  (+10 more)
