[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestration"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "docker>=7.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
orchestration = "orchestration.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

[tool.hatch.build.targets.sdist]
include = ["src/orchestration", "README.md"]
